# InfiniTAM-With-Mapper

./: CMakeLists.txt  Mapper-InfiniTAM.kdev4  Mapper.pro
.kdev4/: Mapper-InfiniTAM.kdev4
Disparity/BM_SGBM/: blockmatching.cpp  blockmatching.h  sgblockmatching.cpp  sgblockmatching.h
Disparity/SPS_Stereo/: SPSStereo.cpp  SPSStereo.h  defParameter.h
Disparity/SPS_Stereo/.kdev4/: spsstereo.kdev4
Disparity/libelas/src/: elas.cpp  matrix.cpp  matrix.h
InfiniTAM/Engine/: CLIEngine.cpp  CMakeLists.txt  ImageSourceEngine.cpp  ImageSourceEngine.h  UIEngine.cpp  UIEngine.h
InfiniTAM/ITMLib/: CMakeLists.txt
InfiniTAM/ITMLib/Engine/: ITMGroundTruthTracker.h  ITMMainEngine.cpp  ITMMainEngine.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CUDA/: ITMSceneReconstructionEngine_CUDA.cu
InfiniTAM/ITMLib/Utils/: ITMLibSettings.cpp
InfiniTAM/ORUtils/: CMakeLists.txt
InfiniTAM/Utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h
InfiniTAM/cmake/: CUDACheckCompute.cmake
include/: InfiniTAM.h  calibrationparameters.h  getcameraposethread.h  infinitamthread.h  mainwindow.h  modelpainting.h  readlocalfilethread.h  realtimecamthread.h  reconstructionthread.h  stereoimage.h  ui_mainwindow.h
libviso2/src/: matcher.cpp  matcher.h  matrix.cpp  matrix.h  viso.cpp  viso.h  viso_stereo.cpp
src/: calibrationparameters.cpp  getcameraposethread.cpp  infinitamthread.cpp  main.cpp  mainwindow.cpp  modelpainting.cpp  readlocalfilethread.cpp  realtimecamthread.cpp  reconstructionthread.cpp  stereoimage.cpp
ui/: mainwindow-backup.ui  mainwindow.ui
